# expence_tracker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README  README.md  bacon.toml  expenses.db
.github/workflows/: ci.yml
frontend/: .dockerignore  Cargo.toml  Dockerfile
frontend/src/: main.rs
frontend/src/components/: expense_form.rs  expense_list.rs  layout.rs  mod.rs
frontend/src/models/: expense.rs  mod.rs
frontend/src/pages/: add_expense.rs  expense_list.rs  home.rs  mod.rs
frontend/src/services/: expense_service.rs  mod.rs
migrations/: 001_create_expenses.sql
src/: database.rs  error.rs  main.rs
src/handlers/: expenses.rs
src/models/: expense.rs
src/services/: expense_service.rs  mod.rs
