[package]
name = "expence_tracker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "expence_tracker"
path = "src/main.rs"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
chrono = {version = "0.4.42", features = ["serde"]}
serde_json = "1.0.145"
uuid = {version = "1.18.1", features = ["v4", "serde"]}
tower = "0.5.2"
tower-http = {version = "0.6.6", features = ["cors"]}
sqlx = {version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"]}
anyhow = "1.0.98"
thiserror = "2.0.17"
validator = {version = "0.20.0", features = ["derive"]}

[dev-dependencies]
reqwest = {version = "0.12.23", features = ["json"]}


