[package]
name = "expense-tracker-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = {version ="0.6.3", features = ["web"]}
dioxus-web = "0.6.3"
dioxus-router = "0.6.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["json"] }
chrono = {version = "0.4.42", features = ["serde"]}
uuid = {version = "1.18.1", features = ["v4", "serde", "js"]}
anyhow = "1.0.98"
thiserror = "2.0.17"
validator = {version = "0.20.0", features = ["derive"]}

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
